--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
             <div class="col-lg-7">
                 <div class="section-title position-relative pb-3 mb-5">
                     <h5 class="fw-bold text-primary text-uppercase">About Us</h5>
-                    <h1 class="mb-0">Avalonoc Labs: Innovative Software Solutions</h1>
+                    <h1 class="mb-0">Avalonic Labs: Innovative Software Solutions</h1>
                 </div>
-                <p class="mb-4">We are Avalonoc Labs, a startup company with 3 years of experience. We specialize in developing offline systems, online systems, mobile apps, and any kind of software solutions tailored to your needs.</p>
+                <p class="mb-4">We are Avalonic Labs, a startup company with 3 years of experience. We specialize in developing offline systems, online systems, mobile apps, and any kind of software solutions tailored to your needs.</p>
                 <div class="row g-0 mb-3">
                     <div class="col-sm-6 wow zoomIn" data-wow-delay="0.2s">
                         <h5 class="mb-3"><i class="fa fa-check text-primary me-3"></i>Professional Staff</h5>
