--- a/index.html
+++ b/index.html
@@ -236,7 +236,13 @@
                         <h4 class="text-primary mb-0">+94716954985</h4>
                     </div>
                 </div>
-                <a href="quote.html" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request A Quote</a>
+                <a href="https://wa.me/94716954985?text=Hello,%20I%20would%20like%20to%20request%20a%20quote." 
+                class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" 
+                data-wow-delay="0.9s" 
+                target="_blank">
+                Request A Quote
+             </a>
+             
             </div>
             <div class="col-lg-5" style="min-height: 500px;">
                 <div class="position-relative h-100">
