--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                     <img src="img/av.png" alt="Logo" class="me-2" style="height: 24px; vertical-align: middle;">
                     Avalonic Labs
                   </h1>            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
-            </button>
+            </button> -->
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
                     <!-- <a href="index.html" class="nav-item nav-link active">Home</a> -->
