--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                 <!-- Testimonial 1: Mr. Saman -->
                 <div class="testimonial-item bg-light my-4">
                     <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                        <img class="img-fluid rounded" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;">
+                        <img class="img-fluid rounded" src="img/" style="width: 60px; height: 60px;">
                         <div class="ps-4">
                             <h4 class="text-primary mb-1">Mr. Saman</h4>
                             <small class="text-uppercase">Principal, Bandaranayake National College</small>
@@ -527,7 +527,7 @@
                 <!-- Testimonial 2: Mr. Upul -->
                 <div class="testimonial-item bg-light my-4">
                     <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                        <img class="img-fluid rounded" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;">
+                        <img class="img-fluid rounded" src="img/" style="width: 60px; height: 60px;">
                         <div class="ps-4">
                             <h4 class="text-primary mb-1">Mr. Upul</h4>
                             <small class="text-uppercase">Owner, Hardcore Gymnasium</small>
@@ -540,7 +540,7 @@
                 <!-- Testimonial 3: Mr. Sanka -->
                 <div class="testimonial-item bg-light my-4">
                     <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                        <img class="img-fluid rounded" src="img/testimonial-3.jpg" style="width: 60px; height: 60px;">
+                        <img class="img-fluid rounded" src="img/" style="width: 60px; height: 60px;">
                         <div class="ps-4">
                             <h4 class="text-primary mb-1">Mr. Sanka</h4>
                             <small class="text-uppercase">Owner, Green Heaven Bar</small>
