--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h4 class="text-primary">Isuru Madushan</h4>
-                            <p class="text-uppercase m-0">Software Engineer (Frontend)</p>
+                            <p class="text-uppercase m-0">Software Engineer (Frontend + Mobile)</p>
                         </div>
                     </div>
                 </div>
